--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ content="width=device-width, initial-scale=1.0">
   </head>
   <body>
 <p id="firstP"></p>
-<script src="js/script.js"></script>
+<script src="script.js"></script>
     
   </body>
  </html>
